# django_for_apis_williams_5

./: .flake8  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: my-project-dev.yml
config/: settings.py  urls.py
posts/: tests.py
posts/migrations/: 0001_initial.py
